fix: header logo spacing

--- a/src/website/components/header/style.scss
+++ b/src/website/components/header/style.scss
@@ -12,6 +12,10 @@
     margin: auto;
 }
 
+.tatva-site-logo{
+    display: flex;
+}
+
 .not-sticky {
     padding: 12px 3vw;
     background-color: #1f1f1f !important;
